Minor scrollbar fix before adding new elements to menu.

--- a/styles/chess.css
+++ b/styles/chess.css
@@ -91,6 +91,7 @@ html, body {
     height: 100%;
     overflow-y: auto;
     scrollbar-color: #61b0fb #0a204c;
+    scrollbar-width: thin;
 }
 
 .welcome-message {
@@ -450,6 +451,7 @@ html, body {
 }
 
 .notation-container-border {
+    padding: 0px 0px 30px 0px;
     min-height: 100px;
     width: 276px;
     margin: 7px 7px 7px 7px;
